# kde-classic-wallpapers

./: CMakeLists.txt  README.md
Aghi/: metadata.desktop  metadata.json
Air/: metadata.desktop
Ariya/: metadata.desktop  metadata.json
Atra_Dot/: metadata.desktop  metadata.json
Auros/: metadata.desktop  metadata.json
Autumn/: metadata.desktop
Autumn-classic/: metadata.json
Azul/: metadata.desktop  metadata.json
Beach_Reflecting_Clouds/: metadata.desktop  metadata.json
Blue_Curl/: metadata.json
Blue_Wood/: metadata.desktop  metadata.json
Castilla_Sky/: metadata.desktop  metadata.json
Chess/: metadata.desktop  metadata.json
City_at_Night/: metadata.desktop  metadata.json
Code_Poets_Dream/: metadata.desktop  metadata.json
Colorado_Farm/: metadata.desktop  metadata.json
Curls_on_Green/: metadata.desktop  metadata.json
Damselfly/: metadata.desktop  metadata.json
EOS/: metadata.desktop  metadata.json
Elarun/: metadata.desktop
Emotion/: metadata.desktop  metadata.json
Ethais/: metadata.desktop  metadata.json
Evening/: metadata.desktop  metadata.json
Field/: metadata.desktop  metadata.json
Fields_of_Peace/: metadata.desktop  metadata.json
Finally_Summer_in_Germany/: metadata.desktop  metadata.json
Flores/: metadata.desktop  metadata.json
Flower_drops/: metadata.desktop  metadata.json
Flying_Field/: metadata.desktop  metadata.json
Fog_on_the_West_Lake/: metadata.desktop  metadata.json
Fresh_Morning/: metadata.desktop  metadata.json
Golden_Ripples/: metadata.desktop  metadata.json
Grass/: metadata.desktop  metadata.json
Green_Concentration/: metadata.desktop  metadata.json
Hanami/: metadata.desktop  metadata.json
HighTide/: metadata.desktop  metadata.json
Holiday_Cactus/: metadata.desktop  metadata.json
Icy_Tree/: metadata.desktop  metadata.json
JK_Bridge_at_Night/: metadata.desktop  metadata.json
KDE3_World/: metadata.desktop  metadata.json
Korea/: metadata.desktop  metadata.json
Ladybuggin/: metadata.desktop  metadata.json
Leafs_Labyrinth/: metadata.desktop  metadata.json
Media_Life/: metadata.desktop  metadata.json
Midnight_in_Karelia/: metadata.desktop  metadata.json
Plasmalicious/: metadata.desktop  metadata.json
Prato/: metadata.desktop  metadata.json
Quadros/: metadata.desktop  metadata.json
Red_Leaf/: metadata.desktop  metadata.json
Skeeter_Hawk/: metadata.desktop  metadata.json
Spring_Sunray/: metadata.desktop  metadata.json
Storm/: metadata.desktop  metadata.json
The_Rings_of_Saturn/: metadata.desktop  metadata.json
There_is_Rain_on_the_Table/: metadata.desktop  metadata.json
Vector_Sunset/: metadata.desktop  metadata.json
Winter_Track/: metadata.desktop  metadata.json
Yellow_Flowers/: metadata.desktop  metadata.json
