cmake_minimum_required(VERSION 3.16)

project(kde-classic-wallpapers)
set(PROJECT_VERSION "1.0")
set(PROJECT_VERSION_MAJOR 1)


include(WriteBasicConfigVersionFile)
include(FeatureSummary)

set(KF5_MIN_VERSION "5.102.0")
set(KDE_COMPILERSETTINGS_LEVEL "5.82")

find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} )

include(KDEInstallDirs)
include(KDECMakeSettings)
include(KDECompilerSettings)
include(GenerateExportHeader)


install(DIRECTORY Aghi DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Air DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Ariya DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Atra_Dot DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Auros DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Autumn-classic DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Azul DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Beach_Reflecting_Clouds DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Blue_Curl DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Blue_Wood DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Castilla_Sky DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Chess DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY City_at_Night DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Code_Poets_Dream DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Colorado_Farm DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Curls_on_Green DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Damselfly DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Emotion DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY EOS DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Ethais DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Evening DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Field DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Fields_of_Peace DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Finally_Summer_in_Germany DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Flores DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Flower_drops DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Flying_Field DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Fog_on_the_West_Lake DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Fresh_Morning DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Golden_Ripples DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Grass DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Green_Concentration DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Hanami DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY HighTide DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Holiday_Cactus DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Horos DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Icy_Tree DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY JK_Bridge_at_Night DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY KDE3_World DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Korea DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Ladybuggin DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Leafs_Labyrinth DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Media_Life DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Midnight_in_Karelia DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Plasmalicious DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Prato DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Quadros DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Red_Leaf DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Skeeter_Hawk DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Spring_Sunray DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Storm DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY There_is_Rain_on_the_Table DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY The_Rings_of_Saturn DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Vector_Sunset DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Winter_Track DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
install(DIRECTORY Yellow_Flowers DESTINATION ${KDE_INSTALL_WALLPAPERDIR})
